--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Build Windows executable
       run: |
-        pyinstaller --onefile --add-data "header_logo.png;." dental_clinic_app.py
+        pyinstaller --onefile --add-data "header_logo.png;." dental_clinic.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
