--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip install pyinstaller
 
     - name: Build Windows executable
       run: |
-        pyinstaller --onefile --add-data "header_logo.png;." dental_clinic.py
+        pyinstaller --onefile --add-data "header_logo.png;." --hidden-import "fpdf" dental_clinic.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
