--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       
     - name: Build Windows executable
       run: |
-        pyinstaller --onefile --add-data "header_logo.jpeg;." --hidden-import "fpdf" --windows-version-min=6.1 dental_clinic.py
+        pyinstaller --onefile --add-data "header_logo.jpeg;." --hidden-import "fpdf" dental_clinic.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
